re-organized divs and columns

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="css/my-styles.css" rel="stylesheet" media="screen">
   </head>
   <body>
-    <div class=" sidebar pull-left col-md-1">
-      <img  id="wikilogo" class="img-responsive" src="img/wikipedia-logo.jpg" alt="wikipedia logo">
+    <div class=" sidebar pull-left">
+      <img id="wikilogo" class="img-responsive" src="img/wikipedia-logo.jpg" alt="wikipedia logo">
       <!--  begin main menu -->
       <ul>
         <li>Main Page</li>
@@ -19,7 +19,7 @@
         <li><a href="#">Random Article</a></li>
         <li><a href="#">Donate to Wikipedia</a></li>
         <li><a href="#">Wikipedia Store</a></li>
-        <li></li>
+        <li class="divider"></li>
       </ul>
       <!-- begin interaction menu -->
       <ul>
@@ -89,7 +89,7 @@
     </div>
     <!-- end sidebar -->
     <!-- begin menu1 -->
-    <div class="navbar navbar-fixed-top">
+    <div class="topper navbar navbar-fixed-top">
       <ul class="nav navbar-nav navbar-right">
         <li>Not Logged In</li>
         <li>Contributions</li>
@@ -128,7 +128,7 @@
             <p>424,244,245,889 articles in Wingdings</p>
           </div>
           <!-- more nav -->
-          <div class="col-lg-4 pull-right">
+          <div class="moremenu col-lg-4 pull-right">
             <ul>
               <li>Arts</li>
               <li>Biography</li>
@@ -147,13 +147,17 @@
           </div>
         </div>
         <!-- column 1 -->
+        <div class="row1">
         <div class="col1 col-lg-8">
-          <!-- <img src="img/bird.jpg" alt="bird" /> -->
+
           <h2>From today's featured article</h2>
-          <p>Westall was ordained into the Church of England in 1925.[3] He was a curate in Birmingham and at the Church of the Good Shepherd, Brighton. In 1930, he was appointed vicar of St Wilfrid's Church, Brighton.[4][5] He further served as a Vicar at Hawnby and Shaldon. He was appointed Archdeacon of Exeter in 1951,[2] and a canon residentiary of Exeter Cathedral.[6] Late in his life he wrote The Life of the Cathedral Church of Saint Peter in Exeter. On 18 October 1954, he was consecrated into the episcopate as Bishop of Crediton.[7] In 1958, he resigned as archdeacon and canon of Exeter to concentrate on his duties as Bishop.[8] He retired on 29 June 1974.[9]</p>
+          <!-- <img class="pull-right" src="img/bird.jpg" alt="bird" /> -->
+          <p>
+            <img class="pull-right" src="img/bird.jpg" alt="bird" />
+            Westall was ordained into the Church of England in 1925.[3] He was a curate in Birmingham and at the Church of the Good Shepherd, Brighton. In 1930, he was appointed vicar of St Wilfrid's Church, Brighton.[4][5] He further served as a Vicar at Hawnby and Shaldon. He was appointed Archdeacon of Exeter in 1951,[2] and a canon residentiary of Exeter Cathedral.[6] Late in his life he wrote The Life of the Cathedral Church of Saint Peter in Exeter. On 18 October 1954, he was consecrated into the episcopate as Bishop of Crediton.[7] In 1958, he resigned as archrighton.[4][5] He further served as a Vicar at Hawnby and Shaldon. He was appointed Archdeacon of Exeter in 1951,[2] and a canon residentiary of Exeter Cathedral.[6] Late te in his life he wrote The Life of the Cathedral Church of Saint Peter in Exeter. On 18 ife he wrote The Life of the Cathedral Church of Saint Peter in Exeter. On 18 October 1954, he was consecrated into the episcopate as Bishop of Crediton.[7] In 1958, he resigned as archrighton.[4][5] He further served as a Vicar at Hawnby and Shaldon. He was appointed Archdeacon of Exeter in 1951,[2] and a canon residentiary of Exeter Cathedral.[6] Late te in his life he wrote The Life of the Cathedral Church of Saint Peter in Exeter. On 18 October 1954, he was consecrated into the episcopate as Bishop of Crediton.[7] In 1958, he resigned as archrighton.[4][5] He further served as a Vicar at Hawnby and Shaldon. He was appointed Archdeacon of Exeter in 1951,[2] and a canon residentiary of Exeter Cathedral.[6] Late in his life he wrote The Life of the Cathedral Church of Saint Peter in Exeter. On 18 October 1954, deacon and canon of Exeter to concentrate on his duties as Bishop.[8] He retired on 29 June 1974.[9]</p>
 
           <h2>Did you know? The thunder wishes it could be the snow...</h2>
-            <img src="img/reactor.jpg" alt="nuclear reactor" />
+            <img class="pull-left" src="img/reactor.jpg" alt="nuclear reactor" />
             <p>
               <ul>
                 <li>When he caught any unusually coloured rats, he bred them, to establish new colour varieties.</li>
@@ -169,26 +173,30 @@
         <!-- column2 -->
         <div class="col2 col-lg-4">
           <h2>In the News</h2>
-          <img src="img/von.jpg" alt="von miller" />
+          <img class="pull-right" src="img/von.jpg" alt="von miller" />
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <h2>On this day...</h2>
-          <img src="img/ghez.jpg" alt="lady" />
+          <img  class="pull-left" src="img/ghez.jpg" alt="lady" />
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
         </div>
+        </div>
         <!-- footer -->
+        <div class="row2">
           <div class="col3">
             <h2>From Today's featured list</h2>
-            <img src="img/puyi.jpg" alt="puyi the chinese emporer" />
+            <img class="pull-right" src="img/puyi.jpg" alt="puyi the chinese emporer" />
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
           </div>
           <!-- second footer -->
           <div class="col4">
             <h2>Today's featured picture</h2>
-            <img src="img/eyes_pop_2.jpg" alt="scary shit" />
+            <img class="pull-left"src="img/eyes_pop_2.jpg" alt="scary shit" />
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
         </div>
       </div>
+      </div>
     <!-- end main content -->
-
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
